[package]
authors = ["wangzk1900 <wangzk1900@gmail.com>"]
description = "A key-value store"
edition = "2018"
name = "kvs"
version = "0.1.1"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
failure = "0.1.8"
failure_derive = "0.1.8"
serde = {version = "1.0.120", features = ["derive"]}
serde_json = "1.0.61"
structopt = "0.3"
tempfile = "3.0.7"

[dev-dependencies]
assert_cmd = "0.11.0"
predicates = "1.0.0"
tempfile = "3.0.7"
walkdir = "2.2.7"
